# fea_utils

./: .gitattributes  .travis.yml  CMakeLists.txt  appveyor.yml  readme.md
cmake/: fea_utilsConfig.cmake.in  string_algorithmConfig.cmake.in  useful_shitConfig.cmake.in  useful_thingsConfig.cmake.in
include/: string_algorithm.hpp
include/fea_utils/: bitmask.hpp  fea_utils.hpp  file.hpp  memory.hpp  platform.hpp  scope.hpp  string.hpp  thread.hpp
include/useful_shit/: file.hpp  string.hpp  thread.hpp  useful_shit.hpp
include/useful_things/: file.hpp  useful_things.hpp
tests/: main.cpp
